--- a/packages/@hec.js/ui/example/resource/index.html
+++ b/packages/@hec.js/ui/example/resource/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hec.js :: Component</title>
-    <script type="module" async src="./component.js"></script>
+    <title>hec.js :: Resource</title>
+    <script type="module" async src="./resource.js"></script>
   </head>
   <body>
     <my-beer></my-beer>
