preload in resource example

--- a/packages/@hec.js/ui/example/resource/index.html
+++ b/packages/@hec.js/ui/example/resource/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hec.js :: Resource</title>
+    <link rel="preload" as="fetch" crossorigin="anonymous" href="https://random-data-api.com/api/v2/beers">
     <script type="module" async src="./resource.js"></script>
   </head>
   <body>
