fix: nested component

--- a/packages/@hec.js/ui/example/nested-component/index.html
+++ b/packages/@hec.js/ui/example/nested-component/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     
-    <c-a></c-a>
+    <c-a text="Peter"></c-a>
+    <c-a text="Herbert"></c-a>
+    <c-a text="Paula"></c-a>
 
   </body>
 </html>
