plugins: match + lazy

--- a/packages/@hec.js/ui/example/list/index.html
+++ b/packages/@hec.js/ui/example/list/index.html
@@ -10,10 +10,25 @@
       .red { color: red; }
       .blue { color: blue; }
       .green { color: green; }
+
+      a {
+        padding: 1rem;
+        background: rgb(240, 240, 240);
+        border-radius: 0.25rem;
+        color: black;
+        text-decoration: none;
+
+        &.--active {
+          color: blue;
+        }
+
+      }
     </style>
 
   </head>
   <body>
+    <a data-match="--active" href="../list/index.html">Current page: List</a>
+    <a data-match="--active" href="../inline/index.html">Inline Page</a>
     <ul>
       <li data-for="let color of colors" class="{{ color.class }}">{{ color.name }}</li>
     </ul>
