--- a/packages/@hec.js/ui/example/lazy/index.html
+++ b/packages/@hec.js/ui/example/lazy/index.html
@@ -6,6 +6,19 @@
     <title>hec.js :: Plugins</title>
     <script type="module" defer src="./lazy.js"></script>
 
+    <style>
+
+      div {
+        transition: all 0.5s;
+
+        &.--loading {
+          opacity: 0;
+        }
+
+      }
+
+    </style>
+
   </head>
   <body hidden>
 
@@ -27,7 +40,7 @@
 
         <my-test data-lazy></my-test>
 
-        <div data-lazy data-include="include.html"></div>
+        <div data-lazy="--loading" data-include="include.html"></div>
       </div>  
 
       <div data-lazy data-include="include.html"></div>
