--- a/packages/@hec.js/ui/example/nested-component/a.html
+++ b/packages/@hec.js/ui/example/nested-component/a.html
@@ -1,2 +1,5 @@
 <div>{{ text }}</div>
-<c-b text="text"></c-b>
+
+
+<c-b text="e.text" data-for="let e of list"></c-b>
+<c-c person="e" data-for="let e of list"></c-c>
