--- a/packages/@hec.js/ui/example/nested-component/index.html
+++ b/packages/@hec.js/ui/example/nested-component/index.html
@@ -6,6 +6,7 @@
     <title>hec.js :: Component</title>
     <script type="module" async src="./a.js"></script>
     <script type="module" async src="./b.js"></script>
+    <script type="module" async src="./c.js"></script>
   </head>
   <body>
     
