--- a/packages/@hec.js/ui/example/nested-signal/index.html
+++ b/packages/@hec.js/ui/example/nested-signal/index.html
@@ -8,9 +8,10 @@
   </head>
   <body>
      
-     <pre>{{ person.name }}</pre>
+     <pre data-for="let person of persons">{{ person.name }}</pre>
 
      <button data-on="click:nextName">Next name</button>
      <button data-on="click:nextPerson">Next person</button>
+     <button data-on="click:nextList">Next list</button>
   </body>
 </html>
