--- a/packages/@hec.js/ui/example/plugins/index.html
+++ b/packages/@hec.js/ui/example/plugins/index.html
@@ -54,5 +54,18 @@
       <pre data-include="./include.html"></pre>
     </div>
 
+    <div>
+      <h3>[data-route]: Shows a node only if a route matches.</h3>
+
+      <button onclick="history.pushState(null, null, './fu/')">Reveal</button>
+      
+      <div data-route="/example/plugins/fu/">
+        I am here!
+        <div data-route="/">
+          OK :)
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
