--- a/packages/@hec.js/ui/example/nested-component/index.html
+++ b/packages/@hec.js/ui/example/nested-component/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     
-    <c-a text="Peter"></c-a>
-    <c-a text="Herbert"></c-a>
-    <c-a text="Paula"></c-a>
+    <div data-view="a" text="Peter"></div>
+    <div data-view="a" text="Herbert"></div>
+    <div data-view="a" text="Paula"></div>
 
   </body>
 </html>
