--- a/packages/@hec.js/ui/example/resource/index.html
+++ b/packages/@hec.js/ui/example/resource/index.html
@@ -8,6 +8,6 @@
     <script type="module" async src="./resource.js"></script>
   </head>
   <body>
-    <my-beer></my-beer>
+    <div data-component="my-beer"></div>
   </body>
 </html>
