--- a/packages/@hec.js/ui/example/provider/index.html
+++ b/packages/@hec.js/ui/example/provider/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hec.js :: Resolver</title>
-    <script type="module" async src="./resolver.js"></script>
+    <title>hec.js :: Provder</title>
+    <script type="module" async src="./provider.js"></script>
 
     <style>
       li.--selected {
