--- a/packages/@hec.js/ui/example/attributes/index.html
+++ b/packages/@hec.js/ui/example/attributes/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hec.js :: Inline</title>
+    <title>hec.js :: Data-Group</title>
   </head>
   <body>
 
@@ -14,7 +14,7 @@
     <script type="module">
       import { templateByNode } from '../../lib/index.js';
 
-      templateByNode(document.body, {
+      templateByNode(document, {
         list: [
           { name: 'Joey' },
           { name: 'Pascal' },
