fix: route matcher

--- a/packages/@hec.js/ui/example/lazy-list/index.html
+++ b/packages/@hec.js/ui/example/lazy-list/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <ul>
-      <li data-lazy data-include="part.html" data-for="let person of persons"></li>
+      <li data-lazy href="/example/lazy-list/" data-include="part.html" data-for="let person of persons"></li>
     </ul>
   </body>
 </html>
